# buggerall

./: .gitignore  CLAUDE.md  config.py  logging_setup.py  main.py  pyproject.toml  style_guide.md  tooling.md
jira/: client.py  match_ticket.py  process_ticket.py
qase_runs/: get_runs.py
