[project]
name = "buggerall"
version = "0.1.0"
description = "A system to open Jira defects from Qase test failures"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.5",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade — enforces modern syntax (flags legacy typing imports)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions — enforces comprehension usage
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking — moves type-only imports into TYPE_CHECKING blocks
    "PGH",  # pygrep-hooks
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["buggerall"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
